# PETSIRD

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE.txt  README.md  SUPPORT.md  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.bashrc  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/configure-environment/: action.yml
.github/workflows/: ci.yml  test_pypi.yml
cpp/: CMakeLists.txt  README.md  petsird.h  petsird_analysis.cpp  petsird_generator.cpp  petsird_helpers.h  prd_analysis.cpp  prd_generator.cpp
cpp/cmake/: PETSIRDConfig.cmake.in
cpp/example/: CMakeLists.txt  PETSIRD_test.cpp  PETSIRD_test_helpers.cpp  README.md
cpp/helpers/: CMakeLists.txt  petsird_analysis.cpp  petsird_generator.cpp
cpp/helpers/include/: petsird_helpers.h
cpp/helpers/include/petsird/helpers/: geometry.h
cpp/helpers/include/petsird_helpers/: create.h  geometry.h
cpp_test/: CMakeLists.txt
matlab/: README.md  build-toolbox.sh  buildfile.m  petsird_generator.m
matlab/+petsird/: AnnulusShape.m  Atom.m  BedMovementTimeBlock.m  BoxShape.m  BoxSolidVolume.m  BulkMaterial.m  CoincidenceEvent.m  CoincidencePolicy.m  Coordinate.m  DeadTimeTimeBlock.m  DetectionEfficiencies.m  DetectorModule.m  Direction.m  DirectionMatrix.m  EventTimeBlock.m  ExamInformation.m  ExternalSignalTimeBlock.m  ExternalSignalType.m  ExternalSignalTypeEnum.m  GantryMovementTimeBlock.m  GenericSolidVolume.m  GeometricShape.m  Header.m  Institution.m  ModulePairEfficiencies.m  PETSIRDReaderBase.m  PETSIRDWriterBase.m  ReplicatedBoxSolidVolume.m  ReplicatedDetectorModule.m  ReplicatedGenericSolidVolume.m  ReplicatedObject.m  RigidTransformation.m  ScannerGeometry.m  ScannerInformation.m  SolidVolume.m  Subject.m  TimeBlock.m  TimeFrameInformation.m  TimeInterval.m  TripleEvent.m
matlab/+petsird/+binary/: AnnulusShapeSerializer.m  AtomSerializer.m  BedMovementTimeBlockSerializer.m  BoxShapeSerializer.m  BulkMaterialSerializer.m  CoincidenceEventSerializer.m  CoordinateSerializer.m  DeadTimeTimeBlockSerializer.m  DetectionEfficienciesSerializer.m  DetectorModuleSerializer.m  DirectionMatrixSerializer.m  DirectionSerializer.m  EventTimeBlockSerializer.m  ExamInformationSerializer.m  ExternalSignalTimeBlockSerializer.m  ExternalSignalTypeSerializer.m  GantryMovementTimeBlockSerializer.m  HeaderSerializer.m  InstitutionSerializer.m  ModulePairEfficienciesSerializer.m  PETSIRDReader.m  PETSIRDWriter.m  ReplicatedObjectSerializer.m  RigidTransformationSerializer.m  ScannerGeometrySerializer.m  ScannerInformationSerializer.m  SolidVolumeSerializer.m  SubjectSerializer.m  TimeFrameInformationSerializer.m  TimeIntervalSerializer.m  TripleEventSerializer.m
matlab/+petsird/+helpers/: get_detection_efficiency.m
matlab/toolbox/: .gitignore  petsird_analysis.m  petsird_generator.m
matlab/toolbox/+petsird/: .gitignore
matlab/toolbox/+petsird/+helpers/: analysis.m  expand_detection_bin.m  expand_detection_bins.m  generator.m  get_detection_efficiency.m  get_module_and_element.m  get_num_detecting_elements.m  get_num_detection_bins.m  make_detection_bin.m  make_detection_bins.m
model/: CoincidenceEvent.yml  DICOMTypes.yml  DetectionEfficiencies.yml  DetectorInformation.yml  DetectorTypes.yml  Events.yml  ExamInformation.yml  GeometryInformation.yml  GeometryTypes.yml  MaterialInformation.yml  MaterialTypes.yml  Protocol.yml  README.md  ScannerInformation.yml  Shapes.yml  TimeFrameInformation.yml  TripleEvent.yml  _package.yml  model.yml
python/: README.md  README.pypi.md  petsird_analysis.py  petsird_generator.py  petsird_helpers.py  petsird_plot_scanner.py  prd_analysis.py  prd_generator.py  prd_plot_scanner.py  pyproject.toml
python/petsird/: __init__.py  binary.py  ndjson.py  protocols.py  types.py
python/petsird/helpers/: __init__.py  analysis.py  generator.py  geometry.py  plot_scanner.py
