[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prd"
version = "0.0.1"  # Update as needed
description = "Your package description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }  # Update as needed
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.3",
]
