[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "petsird"
dynamic = ["version"]
description = "Library and tools for working with Positron Emission Tomography Standardization Initiative Raw Data (PETSIRD)"
readme = "README.pypi.md"
authors = [
    # TODO
    {name = "Kris Thielemans", email = "k.thielemans@ucl.ac.uk"},
]
maintainers = [
    {name = "Casper da Costa-Luis", email = "imaging@cdcl.ml"},
    {name = "Kris Thielemans", email = "k.thielemans@ucl.ac.uk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."]

[tool.setuptools]
license-files = [] # see https://github.com/pypa/twine/issues/1216#issuecomment-2609745412

[tool.setuptools.packages.find]
include = ["petsird", "petsird.*"]

[tool.setuptools_scm]
version_file = "petsird/version.py"
root = ".."

[project.urls]
Homepage = "https://etsinitiative.org"
Repository = "https://github.com/ETSInitiative/PETSIRD"
Issues = "https://github.com/ETSInitiative/PETSIRD/issues"
